--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ html, body {
   fill: #4679B2;
   stroke: black;
   stroke-width: 1;
+  opacity: .8;
 }
 
 .bar:hover {
-  fill: rgb(239, 113, 0);
+  fill: rgb(255, 236, 96);
 }
 
 .label {
